k8s/osdu/identity/overlays/do-private/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-public
  namespace: osdu-identity
  annotations:
    # Keycloak cần buffer lớn cho token response
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - keycloak.do-osdu.esstar.com.vn
    secretName: cf-origin-keycloak-tls
  rules:
  - host: keycloak.do-osdu.esstar.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
